# rascal

./: Makefile  README.md  dune-project  rascal.opam  todo  todo.txt
lib/: ast.ml  ast.mli  context.ml  context.mli  dune  eval.ml  eval.mli  expr.ml  lexer.mll  parse.ml  parse.mli  parser.mli  parser.mly  primitive.ml  primitive.mli
test/: context.ml  dune  eval.ml  parse.ml
