(library
 (name parse)
 (modules parse)
 (inline_tests)
 (preprocess (pps ppx_expect))
 (libraries rascal))

(library
 (name context)
 (modules context)
 (inline_tests)
 (preprocess (pps ppx_expect))
 (libraries rascal))

(library
 (name eval)
 (modules eval)
 (inline_tests)
 (preprocess (pps ppx_expect))
 (libraries rascal))
